--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -141,5 +141,10 @@
     "Announce Time": "Announce Time",
     "Seeders": "Seeders",
     "Leechers": "Leechers",
-    "Success": "Success"
+    "Success": "Success",
+    "Active": "Active",
+    "h": "h",
+    "m": "m",
+    "s": "s",
+    "eta": "eta"
 }
