--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -118,7 +118,7 @@
     "Transmission Version": "Transmission 版本",
     "UI Version": "UI 版本",
     "RPC Version": "RPC 版本",
-    "Torrrent added successfully": "种子添加成功",
+    "Torrent added successfully": "种子添加成功",
     "Torrent deleted successfully": "种子删除成功",
     "Torrent started successfully": "种子开始成功",
     "Torrent stopped successfully": "种子停止成功",
