--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -119,7 +119,7 @@
     "Transmission Version": "Transmission Version",
     "UI Version": "UI Version",
     "RPC Version": "RPC Version",
-    "Torrrent added successfully": "Torrrent added successfully",
+    "Torrent added successfully": "Torrent added successfully",
     "Torrent deleted successfully": "Torrent deleted successfully",
     "Torrent started successfully": "Torrent started successfully",
     "Torrent stopped successfully": "Torrent stopped successfully",
