--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -30,7 +30,7 @@
     "Stop Selected Torrents": "停止选中的种子",
     "Delete Selected Torrents": "删除选中的种子",
     "Confirm": "确认",
-    "Rows per page": "每页行数",
+    "RowsPerPage": "每页行数",
     "Page": "当前页",
     "Go to first page": "跳转到第一页",
     "Go to last page": "跳转到最后一页",
@@ -145,5 +145,6 @@
     "h": "小时",
     "m": "分钟",
     "s": "秒",
-    "eta": "剩余时间"
+    "eta": "剩余时间",
+    "Search ...": "搜索 ..."
 }
