MOD: add i18next

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -150,5 +150,6 @@
     "m": "m",
     "s": "s",
     "eta": "eta",
-    "Search ...": "Search ..."
+    "Search ...": "Search ...",
+    "EditingFollowingTorrent": "Edit the following torrent"
 }
