ADD, FIX: 新增搜索框，修复若干Bug以及显示错误 (#1)
* MOD: update TorrentTable and localization files to improve row label and add global search functionality

* MOD: update TorrentManager to include session download directory in unique downloadDirs

* MOD: refactor TorrentColumns to use ActionButton component for improved action handling

* MOD: fix some eslint

* MOD: add dialog handling for editing and deleting torrents, refactor TorrentTable and ActionButton components

* MOD: add success toast notifications for torrent path and location updates, fix path mutation logic in EditDialog

* MOD: add i18next

* FIX: adding parameter

* FIX: column value

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,7 +31,8 @@
     "Stop Selected Torrents": "Stop Selected Torrents",
     "Delete Selected Torrents": "Delete Selected Torrents",
     "Confirm": "Confirm",
-    "Rows Per Page": "Rows Per Page",
+    "aa": "bb",
+    "RowsPerPage": "Rows Per Page",
     "Page": "Page",
     "Go to first page": "Go to first page",
     "Go to last page": "Go to last page",
@@ -123,6 +124,8 @@
     "Torrent deleted successfully": "Torrent deleted successfully",
     "Torrent started successfully": "Torrent started successfully",
     "Torrent stopped successfully": "Torrent stopped successfully",
+    "Torrent path renamed successfully": "Torrent path renamed successfully",
+    "Torrent location set successfully": "Torrent location set successfully",
     "Port test successfully": "Port test successfully",
     "Failed to test port": "Failed to test port",
     "Failed to add torrent": "Failed to add torrent",
@@ -146,5 +149,7 @@
     "h": "h",
     "m": "m",
     "s": "s",
-    "eta": "eta"
+    "eta": "eta",
+    "Search ...": "Search ...",
+    "EditingFollowingTorrent": "Edit the following torrent"
 }
