ADD: Label support

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -154,5 +154,7 @@
     "EditingFollowingTorrent": "Edit the following torrent",
     "UI Settings": "UI Settings",
     "Client Network Speed Summary": "Client Network Speed Summary",
-    "UI Settings updated": "UI Settings updated"
+    "UI Settings updated": "UI Settings updated",
+    "Clear filters": "Clear filters",
+    "Labels": "Labels"
 }
