--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -152,5 +152,7 @@
     "EditingFollowingTorrent": "正在编辑该种子",
     "UI Settings": "UI 设置",
     "Client Network Speed Summary": "本地网速聚合展示",
-    "UI Settings updated": "UI 设置已更新"
+    "UI Settings updated": "UI 设置已更新",
+    "Clear filters" : "清除筛选",
+    "Labels": "标签"
 }
