ADD: copy button for announce

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -183,5 +183,9 @@
     "Replace {{count}} Torrents": "Replace {{count}} Torrents",
     "Enter the tracker URL to search and replace across torrents": "Enter the tracker URL to search and replace across torrents",
     "常用工具": "Common Tools",
-    "Torrent set successfully": "Torrent set successfully"
+    "Torrent set successfully": "Torrent set successfully",
+    "Copy": "Copy",
+    "Copied": "Copied",
+    "Copied to clipboard": "Copied to clipboard",
+    "Failed to copy": "Failed to copy"
 }
